force-app/main/default/objects/Order_Filter__mdt/Order_Filter__mdt.object-meta.xml
<CustomObject>
    <label>Order Filter</label>
    <pluralLabel>Order Filters</pluralLabel>
</CustomObject>