force-app/main/default/objects/Order_Filter__mdt/fields/Order_Mapper__c.field-meta.xml
<CustomField>
    <fullName>Order_Mapper__c</fullName>
    <label>Order Mapper</label>
    <referenceTo>Order_Mapper__mdt</referenceTo>
    <relationshipLabel>Order Filters</relationshipLabel>
    <relationshipName>Order_Filters</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>